# Term-Contacts

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  plan.txt
.cache/clangd/index/: contact.cpp.6E28BCB40502A77F.idx  contact.h.4D71F368B0DE2D83.idx  contact_manager.cpp.827F1304976136CF.idx  contact_manager.h.1D082139A35D02B1.idx  file_io.cpp.AE5CBE3968A89749.idx  file_io.h.93EA83D49DCA8899.idx  main.cpp.6A58EC1B156F3279.idx  ui.cpp.EDCDC3C3AED320F8.idx  ui.h.90B3DD5E9BF5AF33.idx  unicode_ui.cpp.CE99BC454F405233.idx  unicode_ui.h.D7180A5AE3D7EBCB.idx
Old/: main.cpp
cnotes/: test.cpp  test1.cpp
cppnotes/: output.cpp  quicksort.cpp  test.cpp  test2.cpp  test4.cpp  unicode.cpp  unicode.py
data/: contacts.csv
include/: Contact.h  contact_manager.h  file_io.h  ui.h  unicode_ui.h
notes/: binarySearch.cpp  mergesort.cpp  test3.cpp
src/: CMakeLists.txt  Contact.cpp  main.cpp
src/modules/: contact.cpp  contact_manager.cpp  file_io.cpp  ui.cpp  unicode_ui.cpp
